# AirJoy

./: CMakeLists.txt  README
build.android/: README
build.share/: README
src/: CMakeLists.txt
src/AirJoy/: AirCriticalSection.cpp  AirCriticalSection.h  AirJoy.cpp  AirJoy.h  AirJoyCommon.cpp  AirJoyCommon.cpp~  AirJoyCommon.h  AirJoyCommon.h~  AirJoyConfig.h  AirJoyDelegate.h  AirJoyDispatcher.h  AirJoyMessage.cpp  AirJoyMessage.h  AirJoyProcessor.cpp  AirJoyProcessor.h  AirJoyProcessorDelegate.h  AirJoyRequest.cpp  AirJoyRequest.cpp~  AirJoyRequest.h  AirJoyRequestDelegate.h  AirJoyRequestThread.cpp  AirJoyRequestThread.h  AirThread.cpp  AirThread.cpp~  AirThread.h  TcpMaster.cpp  TcpMaster.h  TcpRequestHandler.h  TcpWorker.cpp  TcpWorker.h
src/MiniIpc/include/: MiniNotify.h  MiniNotifyInfo.h  MiniNotifyTypedef.h
src/MiniIpc/src/: MiniNotify.cpp  MiniNotifyInfo.cpp
src/TcpServer/: TcpMaster.cpp  TcpMaster.h  TcpRequestHandler.h  TcpWorker.cpp  TcpWorker.h
test/: CMakeLists.txt  README  test.cpp
